CAコンテナが一通り形になった。

--- a/ca/.env.sample
+++ b/ca/.env.sample
@@ -1,6 +1,6 @@
-SECRET_FILE=/run/secrets/secret
+SECRET_FILE=/run/secrets/ca_secret
 CONFIG_DIR=/etc/ssl
-CONFIG_FILE=$CONFIG_DIR/openssl.cnf
+CONFIG_FILE="$CONFIG_DIR/openssl.cnf"
 SCRIPT_DIR=/usr/local/bin
 CRL_DIR=/var/www/crl
 
