--- a/ca/.env.sample
+++ b/ca/.env.sample
@@ -2,7 +2,7 @@ SECRET_FILE=/run/secrets/ca_secret
 CONFIG_DIR=/etc/ssl
 CONFIG_FILE="$CONFIG_DIR/openssl.cnf"
 SCRIPT_DIR=/usr/local/bin
-CRL_DIR=/var/www/crl
+CA_WWW_DIR=/var/www/ca
 
 ROOT_CA_DIR=/etc/ssl/root_ca
 ROOT_CA_OCSP_DOMAIN=ca.localdomain
