--- a/ca/resource/nginx/conf.d/ca_vhost.conf
+++ b/ca/resource/nginx/conf.d/ca_vhost.conf
@@ -4,11 +4,11 @@ server {
   server_name      internal.ca.localdomain;
 
   location / {
-    root           /var/www/crl;
-    index          inter_ca.crl;
+    root           /var/www/ca;
+    index          inter_ca.crt;
   }
 
   location = / {
-    rewrite ^(.*)$ http://ca.localdomain/inter_ca.crl redirect;
+    rewrite ^(.*)$ http://ca.localdomain/inter_ca.crt redirect;
   }
 }
