--- a/reverse_proxy/nginx/conf.d/default.conf
+++ b/reverse_proxy/nginx/conf.d/default.conf
@@ -68,6 +68,8 @@ server {
 
   ssl_certificate      /etc/ssl/certs/user/localdomain.chain.crt;
   ssl_certificate_key  /etc/ssl/private/localdomain.nopass.pem;
+  ssl_stapling         on;
+  ssl_stapling_verify  on;
 
   location / {
     root           /var/www/html;
